# CSFI

./: .gitignore  README.md  pyproject.toml  requirements.txt
CSFI/: config.json  weights.pth
src/: data.py  main.py  model_class.py  models.py
