[project]
name = "csfi"
version = "0.1.0"
description = "Custom Street Flood Index"
authors = [{name="Quentin Euler"}]
requires-python = ">=3.9"

dependencies = [
    "numpy==1.26.4",
    "torch==2.5.1",
    "geopandas==0.14.4",
    "osmnx==1.9.3",
    "shapely==2.0.7",
    "rasterio==1.3.9",
    "scipy==1.13.1",
    "scikit-learn==1.4.2",
    "xgboost==3.0.2",
    "tqdm==4.67.1",
    "folium==0.19.5",
    "matplotlib==3.9.2",
    "mapclassify==2.8.1",
    "ipykernel"
]

[tool.setuptools]
packages = ["src"]
